# backtesting-test

./: README.md  pyproject.toml
src/backtesting_test/: main.py
